src/objects/CH_CustomerSpecificTargetSLA__c/CH_CustomerSpecificTargetSLA__c.object-meta.xml
<CustomObject>
    <description>CH Customer Specific Target SLA</description>
    <label>CH Customer Specific Target SLA</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>CH Customer Specific Target SLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CH Customer Specific Target SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>