src/objects/CH_CustomerSpecificTargetSLA__c/fields/CH_IR_Unit__c.field-meta.xml
<CustomField>
    <fullName>CH_IR_Unit__c</fullName>
    <description>Initial Response Unit</description>
    <label>Initial Response Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CH_MilestoneUnitType</valueSetName>
    </valueSet>
</CustomField>