src/objects/CH_CustomerSpecificTargetSLA__c/fields/CH_SDR_Duration__c.field-meta.xml
<CustomField>
    <fullName>CH_SDR_Duration__c</fullName>
    <description>Service Disruption Report Duration will be a whole number</description>
    <label>Service Disruption Report Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>