src/objects/CH_CustomerSpecificTargetSLA__c/fields/CH_SP_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CH_SP_Percentage__c</fullName>
    <description>Value when populated should be between 0 to 100</description>
    <label>Solution Provided % (Non Defect)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>